--- a/app/sass/core/_adaptive.scss
+++ b/app/sass/core/_adaptive.scss
@@ -1,5 +1,11 @@
 @media screen and (max-width: 1260px) {
   .container{
-    width: 768px;
+    width: 100%;
+  }
+  .reserv-small{
+    width: 100%;
+  }
+  .rooms-wrapper{
+    width: 100%;
   }
 }
