--- a/app/sass/core/_vars.scss
+++ b/app/sass/core/_vars.scss
@@ -11,6 +11,5 @@ $c_orange2: #fca942;
 $c_button_orange_hover: #fca335;
 $c_blue_bg: #f0f7ff;
 $с_yellow_bg: #fffbea;
-
-
-$amount: 20%;
+$c_blue_text: #97a4b1;
+$c_orange_link: #da7b05;
