--- a/app/sass/template_styles.scss
+++ b/app/sass/template_styles.scss
@@ -2,6 +2,7 @@
 @import "core/mixins";
 @import "core/reset";
 @import "core/fonts";
+@import "core/grid";
 
 @import "plugins/datepicker.min";
 @import "plugins/swiper.min";
