--- a/app/templates/core/_template.jade
+++ b/app/templates/core/_template.jade
@@ -1,7 +1,8 @@
-include ../mixins/_slider
+include ../mixins/_mixins
 
 doctype html
 html
+    block sharedVars
     head
         block title
         meta(charset='utf-8')
