--- a/app/templates/mixins/_slider.jade
+++ b/app/templates/mixins/_slider.jade
@@ -1,12 +1,15 @@
 mixin slide()
     .swiper-slide
         .special-offers-swiper-container__item
-            .special-offers-swiper-container__img
-                img(src="images/slider-1.jpg")
-            .special-offers-swiper-container__content
-                .special-offers-swiper-container__ttl Специальное предложение для большой компании
-                .special-offers-swiper-container__text
-                    p Забронируйте роскошный номер категории Сюит или Апартаменты  со скидкой 30%!
-                    p Предложение действительно при бронировании от двух ночей.
-                .special-offers-swiper-container__button
-                    a.button-showmore(href="#") Подробнее
+            .row
+                .col-xs-6
+                    .special-offers-swiper-container__img
+                        img(src="images/TEMP/slider-1.jpg")
+                .col-xs-6
+                    .special-offers-swiper-container__content
+                        .special-offers-swiper-container__ttl Специальное предложение для большой компании
+                        .special-offers-swiper-container__text
+                            p Забронируйте роскошный номер категории Сюит или Апартаменты  со скидкой 30%!
+                            p Предложение действительно при бронировании от двух ночей.
+                        .special-offers-swiper-container__button
+                            a.button-showmore(href="#") Подробнее
