--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -30,7 +30,7 @@ block content
 									.label-date-first#formatDate
 										span.dd 10
 										span.mm февраля
-									input.select-date-input#js-firstDate(type="text")
+									input.select-date-input#js-firstDate(type="text", value="8 марта")
 					.col-xs-3
 						.reserv-small-parametrs-item
 							.reserv-small-parametrs-item__content
