--- a/app/sass/core/_vars.scss
+++ b/app/sass/core/_vars.scss
@@ -4,7 +4,7 @@ $white: #fff;
 $c_blocks: #666f78;
 $c_main: #413f4e;
 $c_violet: #30257e;
-$c_button_blue_hover: #37289c;
+$c_button_blue_hover: #4131ae;
 $c_border_grey: #e8e8e8;
 $c_orange: #fb8d05;
 $c_orange2: #fca942;
@@ -13,3 +13,4 @@ $c_blue_bg: #f0f7ff;
 $с_yellow_bg: #fffbea;
 $c_blue_text: #97a4b1;
 $c_orange_link: #da7b05;
+$c_form_bg: #eff6fe;
