--- a/app/sass/template_styles.scss
+++ b/app/sass/template_styles.scss
@@ -15,7 +15,9 @@
 
 @import "blocks/slider";
 @import "blocks/reserv";
+@import "blocks/callback";
 
 @import "pages/index";
+@import "pages/rooms";
 
 @import "core/adaptive";
