--- a/app/templates/core/_header.jade
+++ b/app/templates/core/_header.jade
@@ -10,7 +10,7 @@ header.header
 						.header-contact-item.header-contact-item_point г. Архангельск, ул. Тимме, д.3
 						.header-contact-item.header-contact-item_phone (8182) 66-16-00, 66-14-34
 					.header-button-wrapper
-						a(class="button-call-request js-open-callback" href="#") Заказать звонок
+						a(class="button-call-request js-open-callback" href="#callback") Заказать звонок
 				.header-menu-wrapper
 					ul.header-menu
 						each i in nav
