--- a/app/sass/core/_adaptive.scss
+++ b/app/sass/core/_adaptive.scss
@@ -9,3 +9,175 @@
     width: 100%;
   }
 }
+@media screen and (max-width: 1240px) {
+  .container{
+    width: 768px;
+  }
+  .reserv-small{
+    width: 768px;
+    height: 110px;
+  }
+  .rooms-wrapper{
+    width: 740px;
+    padding-top: 16px;
+    padding-bottom: 20px;
+  }
+  .header-logo-wrapper{
+    width: 300px;
+    height: 120px;
+    padding-top: 35px;
+    padding-left: 78px;
+  }
+  .top-logo{
+    width: 195px;
+    height: 48px;
+    background-size: 195px 48px;
+  }
+  .header-menu-wrapper{
+    display: none;
+  }
+  .header-right-wrapper{
+    height: 120px;
+    width: 460px;
+  }
+  .header-contact-item{
+    float: none;
+    font: 12px/30px "OpenSans";
+    &:first-of-type{
+      margin: 0;
+    }
+    &_point{
+      position: absolute;
+      top: 72px;
+      left: 17px;
+      width: 200px;
+    }
+    &_phone{
+      position: absolute;
+      top: 32px;
+      left: 17px;
+      width: 200px;
+    }
+  }
+  .header-button-wrapper{
+    padding-top: 40px;
+    padding-right: 13px;
+  }
+  .fullsize-img{
+    height: 400px;
+    &__content{
+      top: 83px;
+    }
+    &__city{
+      margin-bottom: -3px;
+    }
+    &__ttl{
+      font-size: 48px;
+      line-height: 50px;
+      margin-bottom: 18px;
+    }
+  }
+  .reserv-small-parametrs-item {
+    padding: 10px 0;
+    &__content {
+      height: 90px;
+    }
+    &__ttl{
+      font-size: 12px;
+    }
+  }
+  .label-date-first{
+    line-height: 42px;
+    span.dd{
+      font-size: 48px;
+      margin-right: 10px;
+    }
+    span.mm{
+      font-size: 15px;
+    }
+  }
+  .select-date{
+    margin-right: 15px;
+    background-position-y: 27px;
+  }
+  .select-guest-wrapper{
+    width: 100%;
+    &__count{
+      font-size: 48px;
+      line-height: 42px;
+    }
+    &__plus{
+      top: 14px;
+      left: 14px;
+    }
+    &__minus{
+      top: 14px;
+      right: 7px;
+    }
+  }
+  .button-reserv{
+    padding: 0 20px;
+  }
+  .reserv-small-button-wrapper{
+    padding: 20px 0;
+  }
+  .rooms{
+    margin: 0 -7px;
+  }
+  .room{
+    margin: 0 7px 14px
+  }
+  .room_size_1,
+  .room_size_2{
+    width: 360px;
+    height: 180px;
+    float: none;
+  }
+  .room_size_4{
+    width: 360px;
+    height: 375px;
+  }
+  .special-offers-wrapper{
+    padding-top: 30px;
+    padding-bottom: 42px;
+    &-ttl{
+      margin-bottom: 20px;
+    }
+  }
+  .special-offers-swiper-container__img{
+    text-align: center;
+    margin-bottom: 8px;
+    img{
+      width: 470px;
+      height: 350px;
+    }
+  }
+  .special-offers-swiper-container{
+    margin-bottom: 17px;
+    &__content:before{
+      content: none;
+    }
+    &__ttl{
+      font-size: 27px;
+      line-height: 33px;
+      text-align: center;
+      margin-bottom: 0;
+    }
+    &__text{
+      display: none;
+    }
+    &__button{
+      display: none;
+    }
+  }
+
+  .yandex-map-wrapper{
+    height: 460px;
+  }
+  .map-label{
+    top: 0;
+    &__button-wrapper{
+      background: $white;
+    }
+  }
+}
