--- a/app/sass/core/_base.scss
+++ b/app/sass/core/_base.scss
@@ -20,6 +20,26 @@ a{
   text-decoration: none;
   color: $c_violet;
 }
+input:focus,
+textarea:focus{
+  outline: none;
+}
+textarea{
+  resize: vertical;
+}
 .yellow-bg{
   background: url(images/yellow-bg.jpg);
+}
+.input,
+.textarea,
+.select{
+  position: relative;
+  .after{
+    position: absolute;
+    top: -3px;
+    left: 15px;
+    color: $c_blocks;
+    font: 12px/30px "OpenSans";
+    font-style: italic;
+  }
 }
