--- a/app/sass/core/_footer.scss
+++ b/app/sass/core/_footer.scss
@@ -11,6 +11,7 @@
   font-size: 13px;
   line-height: 100px;
   float: left;
+  margin-left: 33px;
 }
 .developers{
   background: url(images/f5-logo.png) no-repeat;
@@ -18,5 +19,5 @@
   height: 43px;
   display: block;
   float: right;
-  margin-top: 35px;
+  margin-top: 32px;
 }
