--- a/app/sass/pages/_index.scss
+++ b/app/sass/pages/_index.scss
@@ -13,19 +13,19 @@
     color: $white;
     text-align: center;
     position: absolute;
-    top: 170px;
+    top: 172px;
     width: 100%;
     left: 0;
     right: 0;
   }
   &__city{
     font: 15px/15px "OpenSansSemiBold";
-    margin-bottom: 10px;
+    margin-bottom: 2px;
     text-transform: uppercase;
   }
   &__ttl{
     font: 72px/80px "PlayfairDisplaySCBlack";
-    text-transform: uppercase;
+    margin-bottom: 13px;
   }
   &__desc{
     font: 15px/15px "OpenSans";
@@ -35,11 +35,11 @@
 .special-offers-wrapper{
   background: $white;
   position: relative;
-  padding-top: 87px;
-  padding-bottom: 20px;
+  padding-top: 91px;
+  padding-bottom: 56px;
   &-ttl{
     font: 15px/15px "OpenSansSemiBold";
-    margin-bottom: 40px;
+    margin-bottom: 57px;
     text-transform: uppercase;
     text-align: center;
     color: $c_blocks;
@@ -68,22 +68,22 @@
   border-radius: 3px;
   position: absolute;
   right: 0;
-  top: 95px;
+  top: 105px;
   color: $c_blocks;
   &__content{
-    padding: 65px 35px 0;
+    padding: 62px 25px 0 35px;
   }
   &__ttl{
     font: 19px/30px "OpenSans";
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 23px;
   }
   &__items{
 
   }
   &__item{
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     padding-left: 30px;
     font: 15px/30px "OpenSans";
     &_point{
@@ -109,7 +109,7 @@
   }
 }
 .rooms-wrapper{
-  padding-top: 40px;
+  padding-top: 36px;
   margin: 0 auto;
   width: 1240px;
 }
@@ -155,8 +155,10 @@
   &__ttl{
     color: $white;
     position: relative;
-    font: 33px/33px "PlayfairDisplaySC";
+    font: 33px/44px "PlayfairDisplaySC";
     font-weight: bold;
+    padding: 0 10px;
+    text-align: center;
   }
   &__hover{
     opacity: 0;
