--- a/app/templates/mixins/_menu.jade
+++ b/app/templates/mixins/_menu.jade
@@ -1,4 +1,4 @@
-- var nav = [{url: '/', name: 'Главная'}, {url: 'rooms.html', name: 'Номера'}, {url: '#', name: 'Ресторан'}, {url: '#', name: 'Конференц-зал'}, {url: '#', name: 'Информация'}, {url: '#', name: 'Контакты'}];
+- var nav = [{url: '/', name: 'Об отеле'}, {url: 'rooms.html', name: 'Номера'}, {url: '#', name: 'Ресторан'}, {url: '#', name: 'Конференц-зал'}, {url: '#', name: 'Информация'}, {url: '#', name: 'Контакты'}];
 
 mixin navItem(url, name, current)
     li.header-menu__items
