--- a/app/templates/mixins/_slider.jade
+++ b/app/templates/mixins/_slider.jade
@@ -2,10 +2,10 @@ mixin slide()
     .swiper-slide
         .special-offers-swiper-container__item
             .row
-                .col-xs-6
+                .col-lg-6.col-xs-12
                     .special-offers-swiper-container__img
                         img(src="images/TEMP/slider-1.jpg")
-                .col-xs-6
+                .col-lg-6.col-xs-12
                     .special-offers-swiper-container__content
                         .special-offers-swiper-container__ttl Специальное предложение для большой компании
                         .special-offers-swiper-container__text
