--- a/app/templates/core/_header.jade
+++ b/app/templates/core/_header.jade
@@ -3,6 +3,7 @@ header.header
 		//header-wrapper
 		.header-wrapper
 			.header-logo-wrapper
+				.menu-sm.js-menu
 				a(class="top-logo" href="/")
 			.header-right-wrapper
 				.header-contacts
