--- a/app/templates/core/_template.jade
+++ b/app/templates/core/_template.jade
@@ -23,6 +23,10 @@ html
                 block content
             //end content
 
+            //popup
+            include ../blocks/_callback
+            //end popup
+
             //footer
             include _footer
             //end footer
