--- a/app/templates/rooms.jade
+++ b/app/templates/rooms.jade
@@ -21,28 +21,28 @@ block content
 						.row
 							.col-xs-4
 								.rooms-counter
-									span.num 1
-									| Улучшенный люкс
+									.rooms-counter__num 1
+									.rooms-counter__desc Улучшенный люкс
 							.col-xs-4
 								.rooms-counter
-									span.num 3
-									| Люкс стандарт
+									.rooms-counter__num 3
+									.rooms-counter__desc Люкс стандарт
 							.col-xs-4
 								.rooms-counter
-									span.num 39
-									| Одноместные
+									.rooms-counter__num 39
+									.rooms-counter__desc Одноместные
 							.col-xs-4
 								.rooms-counter
-									span.num 6
-									| Полулюкс
+									.rooms-counter__num 6
+									.rooms-counter__desc Полулюкс
 							.col-xs-4
 								.rooms-counter
-									span.num 3
-									| Хостел
+									.rooms-counter__num 3
+									.rooms-counter__desc Хостел
 							.col-xs-4
 								.rooms-counter
-									span.num 49
-									| Двуместные
+									.rooms-counter__num 49
+									.rooms-counter__desc Двуместные
 					.fullsize-img__bottom.
 						Действуют тарифы: «Завтрак включен» и  «Без завтрака»<br>
 						Стоимость завтрака - 200 руб.
@@ -135,6 +135,3 @@ block content
 			include blocks/_map
 			//end map script
 	//end workarea
-	//popup
-	include blocks/_callback
-	//end popup
