--- a/app/sass/core/_adaptive.scss
+++ b/app/sass/core/_adaptive.scss
@@ -1,3 +1,8 @@
+@media screen and (min-width: 1240px) {
+  .header-menu-wrapper{
+    display: block !important;
+  }
+}
 @media screen and (max-width: 1260px) {
   .container{
     width: 100%;
@@ -9,13 +14,17 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 1240px) {
+@media screen and (max-width: 1239px) {
+  .menu-sm{
+    display: block;
+  }
   .container{
     width: 768px;
   }
   .reserv-small{
     width: 768px;
     height: 110px;
+    margin-top: -55px;
   }
   .rooms-wrapper{
     width: 740px;
@@ -24,9 +33,10 @@
   }
   .header-logo-wrapper{
     width: 300px;
-    height: 120px;
-    padding-top: 35px;
+    height: 117px;
+    padding-top: 32px;
     padding-left: 78px;
+    z-index: 10;
   }
   .top-logo{
     width: 195px;
@@ -35,9 +45,26 @@
   }
   .header-menu-wrapper{
     display: none;
+    border: 0;
+    z-index: 1;
+    padding: 23px 16px 26px;
+    height: auto;
+    width: 268px;
+    background: $white;
+    left: -308px;
+    top: 117px;
+    bottom: auto;
+    border-bottom: 3px solid $c_violet;
+    z-index: 10;
+  }
+  .header-menu{
+    display: block;
+    &__items{
+      margin-bottom: 14px;
+    }
   }
   .header-right-wrapper{
-    height: 120px;
+    height: 117px;
     width: 460px;
   }
   .header-contact-item{
@@ -48,23 +75,23 @@
     }
     &_point{
       position: absolute;
-      top: 72px;
+      top: 69px;
       left: 17px;
       width: 200px;
     }
     &_phone{
       position: absolute;
-      top: 32px;
+      top: 29px;
       left: 17px;
       width: 200px;
     }
   }
   .header-button-wrapper{
-    padding-top: 40px;
+    padding-top: 37px;
     padding-right: 13px;
   }
   .fullsize-img{
-    height: 400px;
+    height: 380px;
     &__content{
       top: 83px;
     }
@@ -178,6 +205,81 @@
     top: 0;
     &__button-wrapper{
       background: $white;
+    }
+  }
+  .fullsize-img_rooms{
+    height: 430px;
+  }
+  .fullsize-img__content_rooms{
+    top: 44px;
+    .fullsize-im__city{
+      font-size: 13px;
+    }
+    .fullsize-img__ttl{
+      margin-bottom: 7px;
+    }
+    .fullsize-img__desc{
+      margin-bottom: 33px;
+      font-size: 13px;
+    }
+  }
+  .rooms-counter-wrapper{
+    margin-bottom: 0px;
+  }
+  .rooms-counter{
+    padding-left: 20px;
+    margin-bottom: 35px;
+    &__num{
+      font-size: 44px;
+      height: 45px;
+    }
+    &__desc{
+      font-size: 15px;
+      line-height: 21px;
+      max-width: 125px;
+      height: 45px;
+    }
+  }
+  .fullsize-img__bottom{
+    font-size: 13px;
+    line-height: 21px;
+  }
+
+  //контакты
+  .panorama{
+    margin-bottom: 55px;
+    iframe{
+      height: 330px;
+    }
+  }
+  .contact-content{
+    &__col{
+      float: none;
+      width: 100%;
+      &:first-of-type{
+        margin-bottom: 53px;
+      }
+    }
+    &__text{
+      padding: 0 18px;
+    }
+    &__block{
+      margin-bottom: 58px;
+      &:last-of-type{
+        margin-bottom: 0;
+      }
+    }
+    &__ttl{
+      font-size: 33px;
+      margin-bottom: 40px;
+    }
+    &__div{
+      margin-bottom: 24px;
+    }
+  }
+  .contact-map{
+    #map{
+      height: 500px;
     }
   }
 }
