--- a/app/sass/core/_base.scss
+++ b/app/sass/core/_base.scss
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   background: url(images/footer-bg.jpg) $white;
+  min-width: 768px;
 }
 .wrapper{
   font-family: "OpenSans";
@@ -11,6 +12,20 @@ body {
 }
 .content {
   flex: 1 0 auto;
+  &.menu-overlay{
+    overflow: hidden;
+    &:before{
+      content: "";
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(48,37,126,0.3);
+      z-index: 9;
+    }
+  }
 }
 .container{
   width: 1260px;
