--- a/app/sass/core/_header.scss
+++ b/app/sass/core/_header.scss
@@ -1,18 +1,34 @@
 .header {
     background: $white;
     color: $c_blocks;
+    border-top: 3px solid $c_violet;
 }
 .header-wrapper{
     @include clearfix();
 }
 .header-logo-wrapper{
     width: 330px;
-    height: 170px;
+    height: 167px;
     background: $c_violet;
     float: left;
     padding-left: 33px;
     padding-top: 49px;
     box-sizing: border-box;
+    position: relative;
+}
+.menu-sm{
+    display: none;
+    position: absolute;
+    top: 51px;
+    left: 18px;
+    background: url(images/menu.png) no-repeat;
+    width: 30px;
+    height: 21px;
+    cursor: pointer;
+    &.drop{
+        background-position-y: -21px;
+        height: 22px;
+    }
 }
 .top-logo{
     background: url(images/top-logo.png) no-repeat;
@@ -23,7 +39,7 @@
 .header-right-wrapper{
     float: right;
     width: 770px;
-    height: 170px;
+    height: 167px;
     position: relative;
 }
 .header-contacts{
@@ -32,7 +48,7 @@
 .header-contact-wrapper{
     @include clearfix();
     float: left;
-    padding-top: 42px;
+    padding-top: 39px;
 }
 .header-contact-item{
     float: left;
@@ -85,7 +101,7 @@
 }
 .header-button-wrapper{
     float:right;
-    padding-top: 30px;
+    padding-top: 27px;
 }
 
 
