--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -80,8 +80,8 @@ block content
 							+slide()
 							+slide()
 					.special-offers-swiper-pagination
-					.special-offers-swiper-button-next
-					.special-offers-swiper-button-prev
+					.next.special-offers-swiper-button-next
+					.prev.special-offers-swiper-button-prev
 
 
 			//end slider
