--- a/app/templates/mixins/_room.jade
+++ b/app/templates/mixins/_room.jade
@@ -1,6 +1,6 @@
 mixin room(ttl, img, size)
     .room(class="room_size_"+size)
-        .room__img
+        .room__img(href="room.html")
             img(src="images/TEMP/"+img)
         .room__ttl= ttl
         .room__hover
