--- a/app/templates/rooms.jade
+++ b/app/templates/rooms.jade
@@ -110,8 +110,8 @@ block content
 							+slide()
 							+slide()
 					.special-offers-swiper-pagination
-					.special-offers-swiper-button-next
-					.special-offers-swiper-button-prev
+					.next.special-offers-swiper-button-next
+					.prev.special-offers-swiper-button-prev
 
 
 			//end slider
