--- a/app/sass/pages/_room.scss
+++ b/app/sass/pages/_room.scss
@@ -8,10 +8,7 @@
   position: relative;
 }
 .room-slider__img{
-  min-height: 780px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
+  height: 780px;
 }
 .room-slider-pagination{
   text-align: right;
