--- a/app/sass/template_styles.scss
+++ b/app/sass/template_styles.scss
@@ -21,5 +21,7 @@
 @import "pages/rooms";
 @import "pages/contacts";
 @import "pages/room";
+@import "pages/reserv";
+@import "pages/info";
 
 @import "core/adaptive";
