--- a/app/templates/mixins/_room.jade
+++ b/app/templates/mixins/_room.jade
@@ -9,4 +9,4 @@ mixin room(ttl, img, size)
                 52 номера, 1-2 человека<br>
                 1 400 руб. для одного гостя<br>
                 2 800 руб на двоих<br>
-            a.room__hover-link(href="#") Забронировать
+            a.room__hover-link(href="reserv.html") Забронировать
