--- a/app/templates/room.jade
+++ b/app/templates/room.jade
@@ -14,14 +14,11 @@ block content
 			.room-slider-container
 				.swiper-wrapper
 					.swiper-slide
-						.room-slider__img
-							img(src="images/hotel-bg.jpg")
+						.room-slider__img(style="background:url(images/hotel-bg.jpg) no-repeat top center; background-size:cover;")
 					.swiper-slide
-						.room-slider__img
-							img(src="images/hotel-bg.jpg")
+						.room-slider__img(style="background:url(images/hotel-bg.jpg) no-repeat top center; background-size:cover;")
 					.swiper-slide
-						.room-slider__img
-							img(src="images/hotel-bg.jpg")
+						.room-slider__img(style="background:url(images/hotel-bg.jpg) no-repeat top center; background-size:cover;")
 				.room-slider-pagination
 			.next.room-slider-button-next
 			.prev.room-slider-button-prev
@@ -43,10 +40,10 @@ block content
 				h2 Описание
 				.room-fulldesc__text
 					.row
-						.col-xs-6
+						.col-lg-6.col-xs-12
 							.room-fulldesc__left.
 								11 номеров категории «Люкс» гостиницы Беломорская имеют увеличенную площадь от 26 квадратных метров, что позволяет Гостю с комфортом расположиться в уютном помещении номера. Зона отдыха с диваном и креслами спланирована так, чтобы каждый Гость мог с удовольствием отдохнуть после насыщенного дня и даже принимать посетителей.
-						.col-xs-6
+						.col-lg-6
 							.room-fulldesc__right.
 								Каждый номер оборудован мини-баром и чай/кофе сетом. В любое время суток Гостям отеля доступен круглосуточный консьерж-сервис и бесплатный Wi-Fi. Окна номеров категории «Люкс» открывают вид на тихий двор.
 
