--- a/app/sass/core/_base.scss
+++ b/app/sass/core/_base.scss
@@ -58,3 +58,69 @@ textarea{
     font-style: italic;
   }
 }
+.withsidebar-wrapper{
+  @include clearfix();
+  padding-top: 67px;
+  padding-bottom: 100px;
+}
+.left-sidebar{
+  float: left;
+  width: 327px;
+}
+.right-content{
+  padding-left: 378px;
+
+  h1{
+    font: 44px/44px "PlayfairDisplaySC";
+    font-weight: bold;
+    margin-bottom: 55px;
+  }
+
+  .minittl{
+    margin-bottom: 21px;
+  }
+}
+.left-menu{
+  background: $white;
+  width: 100%;
+  border: 2px solid $c_form_bg;
+  border-radius: 3px;
+
+  &__item{
+    &:first-of-type {
+      .active {
+        border-top: 0;
+      }
+    }
+    &:last-of-type {
+      .active {
+        border-bottom: 0;
+      }
+    }
+  }
+
+  &__link {
+    font: 13px/66px "OpenSans";
+    color: $c_blocks;
+    padding-left: 45px;
+    text-transform: uppercase;
+    display: block;
+    transition: .5s;
+    &:hover{
+      color: $c_orange;
+    }
+    &.active {
+      background: $c_orange;
+      color: $white;
+      border-bottom: 2px solid $c_form_bg;
+      border-top: 2px solid $c_form_bg;
+      &:hover{
+        color: $white;
+      }
+    }
+  }
+}
+.minittl{
+  font: 13px/22px "OpenSans";
+  text-transform: uppercase;
+}
