--- a/app/templates/contacts.jade
+++ b/app/templates/contacts.jade
@@ -33,7 +33,7 @@ block content
                                 strong Ж/д вокзал:
                                 |  автобус №1, №33, №64, №76  до остановки "Магазин Полюс" или "Кинотеатр Русь".
                             .contact-content__div
-                                a(herf="#") Автобусные маршруты на карте города
+                                a(href="#") Автобусные маршруты на карте города
                             // end Как добраться
 
                         .contact-content__block
@@ -48,7 +48,7 @@ block content
                             .contact-content__div
                                 strong Факс:
                                 |  (8182) 66-14-38<br>
-                                | E-mail: belhotel@list.ru
+                                | E-mail: <a href="mailto:belhotel@list.ru">belhotel@list.ru</a>
                             .contact-content__div
                                 strong Адрес:
                                 |  163 000, Россия,<br>
