--- a/app/sass/core/_base.scss
+++ b/app/sass/core/_base.scss
@@ -12,6 +12,11 @@ body {
 }
 .content {
   flex: 1 0 auto;
+  &:before{
+    content: "";
+    background: transparent;
+    transition: background .6s;
+  }
   &.menu-overlay{
     overflow: hidden;
     &:before{
